# aax-support

./: .gitignore  CMakeLists.txt  ChangeLog  README  description
CMakeModules/: CPack_Defaults.cmake  CPack_Modules.cmake  FindAAX.cmake  FindXML.cmake
aaxconfig/: CMakeLists.txt  aaxconfig.cpp  aaxconfig.h  aaxconfig.qrc  aaxconfig.rc  aaxconfig.ui  aaxconfig_ui.h  aaxwidgets.cpp  aaxwidgets.h  api.c  api.h  main.cpp  types.h  widgets.h
aaxconfig/admin/: aaxconfig.desktop  aaxconfig.xcf
aaxplayer/: .aaxplayer.h.swo  2  CMakeLists.txt  aaxplayer.cpp  aaxplayer.h  aaxplayer.qrc  aaxplayer.rc  aaxplayer.ui  aaxplayer_ui.h  api.c  api.h  main.cpp  remote.cpp  remote.h  remote.ui  remote_ui.h  setup.cpp  setup.h  setup.ui  setup_ui.h
aaxplayer/admin/: aaxplayer.desktop  aaxplayer.qss
aaxrecorder/: CMakeLists.txt  aaxrecorder.cpp  aaxrecorder.h  aaxrecorder.qrc  aaxrecorder.rc  aaxrecorder.ui  aaxrecorder_ui.h  api.c  main.cpp  record.cpp  record.h  record.ui  record_ui.h  setup.cpp  setup.h  setup.ui  setup_ui.h
admin/: aaxconfig.desktop  aaxconfig.qrc  aaxconfig.rc  aaxconfig.xcf  aaxconfig.xpm  aaxplayer.rc  aaxplayer.xcf  aaxplayer.xpm  aaxrecorder.desktop  aaxrecorder.rc  aaxrecorder.xpm  checker.xcf  microphone.xcf  speakers.xcf
base/: api.c  api.h  types.c  types.h
include/: SimpleGlob.h  cmake_config.h.in  config.h  copyright.h  types.h
src/: aaxconfig.cpp  aaxconfig.h  aaxconfig.qrc  aaxconfig.ui  aaxconfig_ui.h  api.c  api.h  main.cpp  types.h  widgets.h
support/: speaker.ac  speaker.ac.bak
